# yolox_onnx_modifier

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/yolox_onnx_modifier/: main.py
